Add Home, Register and Login page, add Flowbite. working with HTML

--- a/worknet-frontend/src/app/features/header/header/header.component.html
+++ b/worknet-frontend/src/app/features/header/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="fixed top-0 flex justify-center items-center w-full h-14 max-h-16 text-gray-700 bg-white shadow-sm z-50">
     <div class="container mt-5 flex p-6">
-        <a href="/home" class="flex items-center ml-10 font-medium text-gray-900 title-font md:mb-0 big-link"> 
-            <img src="WorkNet Logo.svg" class="mt-2 mb-4 flex w-full h-16">
+        <a href="/" class="flex items-center ml-10 font-medium text-gray-900 title-font md:mb-0 big-link"> 
+            <img src="WorkNet Logo.svg" class="mt-2 mb-4 ml-12 flex w-full h-16">
         </a>
         <div class="flex items-center ml-auto space-x-6">
           <nav class="flex items-center text-base space-x-5">
@@ -16,7 +16,7 @@
             <a href="#_" class="flex font-medium hover:text-blue-700">Notifications</a>
           </nav>
           <div class="flex items-center space-x-5 border-l border-gray-200 pl-5">
-            <a href="#_" class="font-medium hover:text-gray-900">Login</a>
+            <a href="/login" class="font-medium hover:text-gray-900">Login</a>
             <a href="#_" class="px-4 py-2 text-xs font-bold text-white uppercase bg-blue-500 rounded shadow hover:shadow-md focus:outline-none active:bg-blue-600 ">
               Sign Up
             </a>
