--- a/worknet-frontend/src/app/features/pages/home/home.component.html
+++ b/worknet-frontend/src/app/features/pages/home/home.component.html
@@ -4,7 +4,11 @@
   <!-- Profile Sidebar -->
  <div class="hidden md:block">
   <div class="bg-white shadow rounded-lg p-4 relative">
+    <span class="absolute top-4 left-4 inline-flex items-center rounded-md bg-purple-50 px-2 py-1 text-xs font-medium text-purple-700 ring-1 ring-purple-700/10 ring-inset">
+      HR
+    </span>
     <div class="flex justify-end gap-16">
+      
       <div class="text-center ">
         <h3 class="text-lg font-semibold">John Doe</h3>
         <p class="text-sm text-gray-500">Software Developer</p>
