--- a/worknet-frontend/src/app/features/pages/header/header.component.html
+++ b/worknet-frontend/src/app/features/pages/header/header.component.html
@@ -1,22 +1,55 @@
 <header class="fixed top-0 flex justify-center items-center w-full h-14 max-h-16 text-gray-700 bg-white shadow-sm z-50">
-    <div class="container mt-5 flex p-6">
-        <a href="/" class="flex items-center ml-10 font-medium text-gray-900 title-font md:mb-0 big-link"> 
-            <img src="WorkNet Logo.svg" class="mt-2 mb-4 ml-12 flex w-full h-16">
-        </a>
-        <div class="flex items-center ml-auto space-x-6">
-          <nav class="flex items-center text-base space-x-5">
-            
-            <a href="/messages" class="font-medium hover:text-blue-700">Messaging</a>
-            <a href="/jobs" class="flex font-medium hover:text-blue-700">Jobs</a>
-            <a href="#_" class="flex font-medium hover:text-blue-700">Notifications</a>
-          </nav>
-          <div class="flex items-center space-x-5 border-l border-gray-200 pl-5">
-            <a href="/login" class="font-medium hover:text-gray-900">Login</a>
-            <a href="/register" class="px-4 py-2 text-xs font-bold text-white uppercase bg-blue-500 rounded shadow hover:shadow-md focus:outline-none active:bg-blue-600 ">
-              Sign Up
-            </a>
-          </div>
-        </div>
-      </div>
-</header>
+  <div class="container mt-5 flex p-6">
+    <a href="/" class="flex items-center ml-10 font-medium text-gray-900 title-font md:mb-0 big-link"> 
+      <img src="WorkNet Logo.svg" class="mt-2 mb-4 ml-12 flex w-full h-16">
+    </a>
 
+    <div class="flex items-center ml-auto space-x-6">
+      <nav class="flex items-center text-base space-x-5">
+        <a href="/messages" class="font-medium hover:text-blue-700">Messaging</a>
+        <a href="/jobs" class="flex font-medium hover:text-blue-700">Jobs</a>
+        <a href="#_" class="flex font-medium hover:text-blue-700">Notifications</a>
+      </nav>
+
+<div class="flex items-center space-x-5 border-l border-gray-200 pl-5">
+
+  <ng-container *ngIf="isLoaded | async; else loading">
+    <ng-container *ngIf="user$ | async as user; else guest">
+      <a href="/profile" class="inline-block">
+        <img
+          [src]="'https://ui-avatars.com/api/?name=' + user.userName"
+          class="rounded-full w-9 h-9"
+          alt="Avatar"
+        />
+      </a>
+      <button
+        (click)="logout()"
+        class="px-4 py-2 text-sm font-medium hover:text-gray-900 bg-red-500 rounded hover:bg-red-600"
+      >
+        Logout
+      </button>
+    </ng-container>
+  </ng-container>
+
+  <ng-template #loading>
+    <div class="spinner-container">
+      <div class="spinner"></div>
+    </div>
+  </ng-template>
+
+  <ng-template #guest>
+    <a href="/login" class="font-medium hover:text-gray-900">Login</a>
+    <a
+      href="/register"
+      class="px-4 py-2 text-xs font-bold text-white uppercase bg-blue-500 rounded shadow hover:shadow-md focus:outline-none active:bg-blue-600"
+    >
+      Sign Up
+    </a>
+  </ng-template>
+
+</div>
+
+      
+    </div>
+  </div>
+</header>
