--- a/worknet-frontend/src/app/features/pages/header/header.component.scss
+++ b/worknet-frontend/src/app/features/pages/header/header.component.scss
@@ -51,3 +51,25 @@ header {
   svg:hover {
     color: #1d4ed8;
   }
+
+  .spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px; /* або відповідна висота */
+}
+
+.spinner {
+  width: 40px;
+  height: 40px;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-top-color: #3498db;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
