--- a/worknet-frontend/src/app/features/pages/header/header.component.html
+++ b/worknet-frontend/src/app/features/pages/header/header.component.html
@@ -11,45 +11,52 @@
         <a href="#_" class="flex font-medium hover:text-blue-700">Notifications</a>
       </nav>
 
-<div class="flex items-center space-x-5 border-l border-gray-200 pl-5">
+      <div class="flex items-center space-x-5 border-l border-gray-200 pl-5">
+        <ng-container [ngSwitch]="displayState$ | async">
+          <ng-container *ngSwitchCase="'initialLoading'">
+            <ng-container *ngTemplateOutlet="loading"></ng-container>
+          </ng-container>
 
-  <ng-container *ngIf="isLoaded | async; else loading">
-    <ng-container *ngIf="user$ | async as user; else guest">
-      <a href="/profile" class="inline-block">
-        <img
-          [src]="'https://ui-avatars.com/api/?name=' + user.userName"
-          class="rounded-full w-9 h-9"
-          alt="Avatar"
-        />
-      </a>
-      <button
-        (click)="logout()"
-        class="px-4 py-2 text-sm font-medium hover:text-gray-900 bg-red-500 rounded hover:bg-red-600"
-      >
-        Logout
-      </button>
-    </ng-container>
-  </ng-container>
+          <ng-container *ngSwitchCase="'guest'">
+            <ng-container *ngTemplateOutlet="guest"></ng-container>
+          </ng-container>
 
-  <ng-template #loading>
-    <div class="spinner-container">
-      <div class="spinner"></div>
-    </div>
-  </ng-template>
+          <ng-container *ngSwitchCase="'user'">
+            <ng-container *ngIf="user$ | async as user">
+              <a href="/profile" class="inline-block">
+                <img
+                  [src]="'https://ui-avatars.com/api/?name=' + user.userName"
+                  class="rounded-full w-9 h-9"
+                  alt="Avatar"
+                />
+              </a>
+              <button
+                (click)="logout()"
+                class="px-4 py-2 text-sm font-medium hover:text-gray-900 bg-red-500 rounded hover:bg-red-600"
+              >
+                Logout
+              </button>
+            </ng-container>
+          </ng-container>
+        </ng-container>
 
-  <ng-template #guest>
-    <a href="/login" class="font-medium hover:text-gray-900">Login</a>
-    <a
-      href="/register"
-      class="px-4 py-2 text-xs font-bold text-white uppercase bg-blue-500 rounded shadow hover:shadow-md focus:outline-none active:bg-blue-600"
-    >
-      Sign Up
-    </a>
-  </ng-template>
+        <ng-template #loading>
+          <div class="spinner-container">
+            <div class="spinner"></div>
+          </div>
+        </ng-template>
 
-</div>
-
-      
+        <ng-template #guest>
+          <a href="/login" class="font-medium hover:text-gray-900">Login</a>
+          <a
+            href="/register"
+            class="px-4 py-2 text-xs font-bold text-white uppercase bg-blue-500 rounded shadow hover:shadow-md focus:outline-none active:bg-blue-600"
+          >
+            Sign Up
+          </a>
+        </ng-template>
+      </div>  
     </div>
   </div>
+  
 </header>
