--- a/worknet-frontend/src/app/features/pages/header/header.component.html
+++ b/worknet-frontend/src/app/features/pages/header/header.component.html
@@ -8,7 +8,7 @@
       <nav class="flex items-center text-base space-x-5">
         <a href="/messages" class="font-medium hover:text-blue-700">Messaging</a>
         <a href="/jobs" class="flex font-medium hover:text-blue-700">Jobs</a>
-        <a href="#_" class="flex font-medium hover:text-blue-700">Notifications</a>
+        <!-- <a href="#_" class="flex font-medium hover:text-blue-700">Notifications</a> -->
       </nav>
 
       <div class="flex items-center space-x-5 border-l border-gray-200 pl-5">
@@ -25,7 +25,7 @@
             <ng-container *ngIf="user$ | async as user">
               <a href="/profile" class="inline-block">
                 <img
-                  [src]="'https://ui-avatars.com/api/?name=' + user.userName"
+                  [src]="'https://drive.google.com/thumbnail?id=1k_x-W5rTqvL9SwjsTiWcHBBbWP8OSEjp'"
                   class="rounded-full w-9 h-9"
                   alt="Avatar"
                 />
