--- a/worknet-frontend/src/app/features/pages/profile/profile.component.html
+++ b/worknet-frontend/src/app/features/pages/profile/profile.component.html
@@ -183,7 +183,7 @@
     </button>
 
     <p class="text-red-500 mt-4 text-sm" *ngIf="errorMessage">{{ errorMessage }}</p>
-    <p class="text-green-500 mt-4 text-sm" *ngIf="successMessage">{{ successMessage }}</p>
+    <!-- <p class="text-green-500 mt-4 text-sm" *ngIf="successMessage">{{ successMessage }}</p> -->
     
   </form>
 </div>
